Overflow fixed.

--- a/src/component/base/app/App.sass
+++ b/src/component/base/app/App.sass
@@ -3,9 +3,10 @@
 #app-main-container
     display: flex
     flex-direction: column
-    height: 100vh
+    height: 100%
     background-color: var(--neutralSecondarySurface)
     position: relative
+    overflow: hidden
 
     &.hide-all-content > *
         display: none
