--- a/src/component/storage/view/favorite/favorite.sass
+++ b/src/component/storage/view/favorite/favorite.sass
@@ -1,5 +1,6 @@
 @import '../../../../lib/style/styleExporter'
 
 #favorite-main-container
+    height: 100%
     h4
         margin-bottom: 0
