--- a/src/component/storage/view/myStorage/breadcrumbs/breadcrumbs.sass
+++ b/src/component/storage/view/myStorage/breadcrumbs/breadcrumbs.sass
@@ -4,7 +4,6 @@
     padding-top: 0.2rem
     padding-bottom: 0.2rem
     padding-left: 0.8rem
-    height: fit-content
     display: flex
 
     .active
