--- a/src/component/storage/view/myStorage/myStorage.sass
+++ b/src/component/storage/view/myStorage/myStorage.sass
@@ -3,7 +3,8 @@
 #my-storage-main-container
     height: 100%
     position: relative
-
+    display: flex
+    flex-direction: column
     .drag-and-drop-message
         display: none
         position: absolute
@@ -24,5 +25,3 @@
                 h3
                     margin: auto
                     color: $teal-500
-        #my-storage-header-container
-            height: 15%
