--- a/src/component/storage/view/sharedWithMe/sharedWithMe.sass
+++ b/src/component/storage/view/sharedWithMe/sharedWithMe.sass
@@ -1,5 +1,6 @@
 @import '../../../../lib/style/styleExporter'
 
 #shared-with-me-main-container
+    height: 100%
     h4
         margin-bottom: 0
